--- a/AppGui/AppGui/packages.config
+++ b/AppGui/AppGui/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ControlzEx" version="3.0.2.4" targetFramework="net46" />
+  <package id="MahApps.Metro" version="1.6.4" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
 </packages>
