--- a/AppGui/AppGui/packages.config
+++ b/AppGui/AppGui/packages.config
@@ -4,4 +4,5 @@
   <package id="MahApps.Metro" version="1.6.4" targetFramework="net46" />
   <package id="MahApps.Metro.IconPacks" version="2.2.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
+  <package id="WpfAnimatedGif" version="1.4.16" targetFramework="net46" />
 </packages>
