--- a/GestureModality/GestureModality/packages.config
+++ b/GestureModality/GestureModality/packages.config
@@ -4,4 +4,5 @@
   <package id="MahApps.Metro" version="1.6.4" targetFramework="net461" />
   <package id="MahApps.Metro.IconPacks" version="2.2.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="WpfAnimatedGif" version="1.4.16" targetFramework="net461" />
 </packages>
