--- a/AppGui/AppGui/AppGui.csproj
+++ b/AppGui/AppGui/AppGui.csproj
@@ -89,6 +89,9 @@
     <Compile Include="ClientWeather.cs" />
     <Compile Include="Data\NewsData.cs" />
     <Compile Include="Data\WeatherData.cs" />
+    <Compile Include="Pages\NewsPage.xaml.cs">
+      <DependentUpon>NewsPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\ParksPage.xaml.cs">
       <DependentUpon>ParksPage.xaml</DependentUpon>
     </Compile>
@@ -129,6 +132,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Pages\NewsPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\ParksPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
